# gdbus

./: README.md
gdbus/: CMakeLists.txt  main.c  notes
gdbus/gdbus/: CarPlayInterface.c  CarPlayInterface.h
gdbus/gdbus/generate/: GDbusCarPlay.c  GDbusCarPlay.h  com.hsae.carplay.xml
